# ytdlpwebui

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INSTALLATION-GUIDE.md  README-Windows.md  README.md  SECURITY.md  docker-compose.yml  docker-setup.sh  env.example  idle-monitor.sh  mobile-app-setup.sh  setup-windows.bat  setup.sh  stop-windows.bat  stop.sh  ytdlp-webui.desktop
.cursor/rules/: specify-rules.mdc
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: download.py  metadata.py  progress.py  status.py
backend/src/middleware/: error_handler.py  validation.py
backend/src/models/: download_job.py  download_request.py  video_metadata.py
backend/src/services/: cleanup_service.py  file_service.py  ytdlp_service.py
backend/src/storage/: job_storage.py
backend/tests/contract/: test_download_get.py  test_download_post.py  test_metadata_post.py  test_progress_get.py  test_status_get.py
backend/tests/integration/: test_concurrent_downloads.py  test_download_flow.py  test_error_handling.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: AdvancedOptions.jsx  DownloadButton.jsx  FormatSelector.jsx  LogPanel.jsx  ProgressIndicator.jsx  UrlInput.jsx
frontend/src/hooks/: useActivityTracker.js
frontend/src/pages/: DownloadPage.jsx
frontend/src/services/: api.js  (+1 more)
scripts/: security-check.sh
specs/001-build-a-modern/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+4 files in other folders)
